# boomi-solace-migration

./: .env.example  .gitignore  Makefile  README.md  culina_test_migration.yaml  pyproject.toml  reference
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
examples/: connector-profile.example.yaml  migration.example.yaml  naming-policy.example.yaml
reference/: migration-overview.md  solace-reference.md  troubleshooting.md
schemas/: connector-profile.schema.json  inventory.schema.json  migration.schema.json  naming-policy.schema.json  plan.schema.json  run-manifest.schema.json
skills/atom-queue-to-solace/: SKILL.md
skills/atom-queue-to-solace/agents/: openai.yaml
skills/atom-queue-to-solace/references/: api-reference.md  migration-overview.md  solace-reference.md  troubleshooting.md  xml-templates.md
src/boomi_solace_migration/: __init__.py  boomi_client.py  cli.py  component_builder.py  detect.py  execution.py  http_retry.py  manifest.py  models.py  naming.py  planning.py  redaction.py  reporting.py  solace_semp.py  transform.py  validation.py  xml_io.py
tests/: conftest.py  test_naming_redaction_retry.py  test_planning_execution.py  test_solace_semp.py  test_transform_and_components.py
tests/fixtures/: existing_dynamic_properties.xml  get_consumer.xml  listen_consumer.xml  mixed.xml  producer.xml  unsupported_queue_variant.xml
tools/migrate/: .env.example  README.md  migration.example.yaml  pyproject.toml
tools/migrate/src/migrate/: __main__.py  boomi.py  component.py  config.py  main.py  solace.py  transform.py  verify.py  xml_util.py
tools/migrate/tests/: conftest.py  test_config.py  test_transform.py  test_verify.py
tools/migrate/tests/fixtures/: consumer.xml  producer.xml
